melchett-mirror: add comment with usage

--- a/conf/melchett-mirror.conf
+++ b/conf/melchett-mirror.conf
@@ -1,3 +1,6 @@
+# Use like this:
+# require conf/melchett-mirror.conf
+
 SOURCE_MIRROR_URL = "http://melchett.local/downloads/"
 INHERIT += "own-mirrors"
 
