site.conf: add commented lines for using a proxy to fetch

--- a/conf/site.conf
+++ b/conf/site.conf
@@ -16,3 +16,6 @@ INHERIT += "timer"
 
 # Don't use ISO images, so don't build them.
 NOISO="1"
+
+#ALL_PROXY="socks://127.0.0.1"
+#GIT_PROXY_COMMAND="/home/ross/Yocto/poky/scripts/oe-git-proxy"
