--- a/conf/site.conf
+++ b/conf/site.conf
@@ -17,5 +17,5 @@ INHERIT += "timer"
 # Don't use ISO images, so don't build them.
 NOISO="1"
 
-#ALL_PROXY="socks://127.0.0.1"
+#export ALL_PROXY="socks4a://127.0.0.1"
 #GIT_PROXY_COMMAND="/home/ross/Yocto/poky/scripts/oe-git-proxy"
