site.conf: disable PR service, add proxy comments

--- a/conf/site.conf
+++ b/conf/site.conf
@@ -6,7 +6,7 @@ DL_DIR = "/home/ross/Yocto/downloads/"
 SANITY_TESTED_DISTROS = ""
 
 # Use a PR server so that the feeds work
-PRSERV_HOST = "localhost:0"
+#PRSERV_HOST = "localhost:0"
 
 # Enable build history
 INHERIT += "buildhistory"
@@ -17,5 +17,8 @@ INHERIT += "timer"
 # Don't use ISO images, so don't build them.
 NOISO="1"
 
-#export ALL_PROXY="socks4a://127.0.0.1"
+#export ALL_PROXY="socks4a://127.0.0.1:1080"
 #GIT_PROXY_COMMAND="/home/ross/Yocto/poky/scripts/oe-git-proxy"
+
+#export http_proxy="socks4a://localhost:1080/"
+#export https_proxy="http://localhost:1080/"
