site.conf: inherit crasher and insanitier classes

--- a/conf/site.conf
+++ b/conf/site.conf
@@ -13,6 +13,8 @@ INHERIT += "buildhistory"
 BUILDHISTORY_COMMIT = "1"
 
 INHERIT += "timer"
+INHERIT += "crasher"
+INHERIT += "insanitier"
 
 # Don't use ISO images, so don't build them.
 NOISO="1"
