site.conf: set SSTATE_DIR

--- a/conf/site.conf
+++ b/conf/site.conf
@@ -1,6 +1,7 @@
 SCONF_VERSION = "1"
 
 DL_DIR = "/home/ross/Yocto/downloads/"
+SSTATE_DIR = "/data/poky/sstate"
 
 # Don't warn about my choice of distro
 SANITY_TESTED_DISTROS = ""
