--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -8,3 +8,5 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 BBFILE_COLLECTIONS += "ross"
 BBFILE_PATTERN_ross = "^${LAYERDIR}/"
 BBFILE_PRIORITY_ross = "6"
+
+LAYERSERIES_COMPAT_ross = "rocko sumo"
