layer: set layer compatibility to whatever core is

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -9,4 +9,4 @@ BBFILE_COLLECTIONS += "ross"
 BBFILE_PATTERN_ross = "^${LAYERDIR}/"
 BBFILE_PRIORITY_ross = "6"
 
-LAYERSERIES_COMPAT_ross = "rocko sumo"
+LAYERSERIES_COMPAT_ross = "${LAYERSERIES_COMPAT_core}"
