--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -9,4 +9,4 @@ BBFILE_COLLECTIONS += "ross"
 BBFILE_PATTERN_ross = "^${LAYERDIR}/"
 BBFILE_PRIORITY_ross = "6"
 
-LAYERSERIES_COMPAT_ross = "dunfell kirkstone langdale mickledore nanbield scarthgap styhead"
+LAYERSERIES_COMPAT_ross = "dunfell kirkstone langdale mickledore nanbield scarthgap styhead walnascar whinlatter"
